Well this commit is really too large... I cleaned up some stuff, and fixed some errors in the store. I changed the way the mock data is loaded and the way I expect data from the server. I also added category selection functionality. I think that's about all...

--- a/status/assets/css/main.css
+++ b/status/assets/css/main.css
@@ -6,6 +6,10 @@ body {
     padding-top: 20px;
 }
 
+a:hover {
+    cursor: pointer;
+}
+
 #content {
     position: relative;
 }
